# Kimera-Distributed

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: SharedLoopClosure.action  VLCFrame.action
config/: arl-jackal-test.yaml  gq-mout-three-robot.yaml  gq-mout.yaml  launch-jackal-test.yaml  mit_three_jackals.yaml  single-machine-example.yaml  wp_four_jackals.yaml
examples/: single-machine-example.yaml
include/kimera_distributed/: DistributedLoopClosure.h  DistributedLoopClosureRos.h  DistributedPcm.h  Keyframe.h  KimeraCentralized.h  KimeraDistributed.h  LcdThirdPartyWrapper.h  Submap.h  SubmapAtlas.h  configs.h  prefix.h  types.h  utils.h
launch/: camp_three_robot_rosbag.launch  city_three_robot_rosbag.launch  debug_three_robot_rosbag.launch  dpgo.launch  euroc_three_robot_rosbag.launch  export_navsatfix.launch  jackal_three_robot_rosbag.launch  kimera_centralized_agent.launch  kimera_centralized_three_robot.launch  kimera_dcist_rosbag.launch  kimera_distributed.launch  kimera_distributed_loop_closure_ros.launch  kimera_distributed_ros.launch  kimera_full_stack.launch  kimera_full_stack_euroc.launch  kimera_jackal.launch  kimera_one_robot.launch  kimera_three_robot.launch  kimera_three_robot_dcist_rosbag.launch  kimera_two_robot.launch  kimera_two_robot_dcist_rosbag.launch  kimera_two_robot_euroc.launch  kimera_two_robot_euroc_rosbag.launch  kimera_vio_ros.launch  medfield_sim_rosbag.launch  mit_rosbag.launch  remote_topic_manager.launch  remote_topic_manager_test.launch  rosbag0.launch  rosbag1.launch  rosbag_euroc_v101.launch  rosbag_medfield.launch  warty_create_gt_mesh.launch
msg/: BowVector.msg  VLCFrames.msg
notebooks/: README.md  metric_semantic_evaluation.ipynb
params/: arl_robot_names.yaml  centralized.yaml  dcist_camp_semantic_mapping.csv  dcist_city_semantic_mapping.csv  dpgo_Euroc.yaml  dpgo_warty.yaml  initial_pose.yaml  pcm_Euroc.yaml  pcm_Jackal.yaml  pcm_JackalMedfield.yaml  pcm_warty.yaml  pcm_warty_camp.yaml  persistent_hosts.yaml  robot_names.yaml  rtm_input_topics0.yaml  rtm_input_topics1.yaml  rtm_input_topics2.yaml  rtm_input_topics_robot.yaml  visual_loopclosure.yaml  visual_loopclosure_Euroc.yaml  visual_loopclosure_Jackal.yaml  visual_loopclosure_JackalMedfield.yaml  visual_loopclosure_warty.yaml  visual_loopclosure_warty_camp.yaml
rviz/: gq_mout.rviz  jackal_arl.rviz  kimera_centralized.rviz  kimera_jackal2_mit.rviz  kimera_jackal_mit.rviz  kimera_three_robot_Euroc.rviz  kimera_three_robot_Jackal.rviz  kimera_three_robot_JackalMedfield.rviz  kimera_three_robot_warty.rviz  kimera_two_robot_euroc.rviz  kimera_vio_euroc_robot_0.rviz  single_machine.rviz
src/: DistributedLoopClosure.cpp  DistributedLoopClosureNode.cpp  DistributedLoopClosureRos.cpp  DistributedPcm.cpp  DistributedPcmNode.cpp  KimeraCentralized.cpp  KimeraCentralizedNode.cpp  KimeraDistributedNode.cpp  LcdThirdPartyWrapper.cpp  NavSatFixExportNode.cpp  PublishInitialRelPoseNode.cpp  Submap.cpp  SubmapAtlas.cpp  types.cpp  utils.cpp
srv/: VLCFrameQuery.srv  addLoopClosure.srv  requestSharedLoopClosures.srv
test/: test_submap.cpp  test_submap_atlas.cpp  test_utils.cpp
